--- a/data visualization.Rmd
+++ b/data visualization.Rmd
@@ -17,7 +17,7 @@ output:
 
 Based on meteorological data from Barcelona for the year 2024, we create a dynamic area chart with the "date" variable on the X-axis and the "daily average temperature" variable on the Y-axis. data available on: https://opendata.aemet.es/centrodedescargas/productosAEMET
 
-```{r warning=FALSE, message=FALSE}
+```{r dygraph, message=FALSE, warning=FALSE}
 # Library
 library(dygraphs)
 library(xts)          
@@ -29,8 +29,7 @@ library(dplyr)
 library(stringr)
 
 # Data import
-#meteo_2024 <- read_csv("Màster en Data Science/3r semestre/Visualització de dades/PAC 2/meteo_2024.csv")
-meteo_2024 <- read.csv("meteo_2024.csv")
+meteo_2024 <- readr::read_csv("meteo_2024.csv")
 
 # I have to convert the date column to a date-time format
 meteo_2024$fecha <- ymd(meteo_2024$fecha)
@@ -61,8 +60,6 @@ p <- dygraph(don) %>%
 
 p
 ```
-
-
 
 
 # 2. Radar Chart
