--- a/data visualization.Rmd
+++ b/data visualization.Rmd
@@ -66,10 +66,11 @@ p
 
 Using a combined dataset with similar variables from 2023 and 2024, we took the numerical variables of daily average rainfall, daily average temperature, and wind direction. These variables were categorized to create individual radar charts for each.
 
-```{r warning=FALSE, message=FALSE}
+```{r radar_charts, fig.width=10, fig.height=15, warning=FALSE, message=FALSE}
 # Libraries
 library(tidyverse)
 library(fmsb)
+
 
 # Data import
 meteo_23_24 <- read.csv("meteo_23_24.csv")
